# librf21x-v399

./: README.md
Librf21x-win-x64/gsp-api/: gsp-api.lib
Librf21x-win-x64/gsp-api-wrap-cpp/: gsp-wrap.cpp  gsp-wrap.h
Librf21x-win-x64/rf21x-api/: rf21x-api.h  rf21x-api.lib
Librf21x-win-x64/rf21x-api-wrap-csharp/: rf21x-test.cs
Librf21x-win-x64/rf21x-api-wrap-csharp/rf21x-csharp/: RF21xMessage.cs  RF21xMessageRawData.cs  SWIGTYPE_p_void.cs  rf21x.cs
doc/API/: annotated.html  classes.html  classrf21x_1_1_r_f21x_device-members.html  classrf21x_1_1_r_f21x_device.html  classrf21x_1_1_r_f21x_message-members.html  classrf21x_1_1_r_f21x_message.html  dir_0755e8f2b340a0d689c9019072e6bba6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f234d69ef6fd0fddf80391787ed955c5.html  doxygen_8h.html  doxygen_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacerf21x.html  namespaces.html  rf21x-api_8h.html  rf21x-api_8h_source.html  rf21x-wrap_8h.html  rf21x-wrap_8h_source.html
doc/API/search/: all_1.js  all_2.js  all_5.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js
librf21x-win-x86/gsp-api/: gsp-api.lib
librf21x-win-x86/rf21x-api/: rf21x-api.lib
librf21x-win-x86/rf21x-api-wrap-csharp/rf21x-csharp/: RF21xDevice.cs  RF21xHidSerialNumbers.cs  rf21xPINVOKE.cs
src/archive/: .hg_archival.txt  .hgignore  .hgtags  CMakeLists.txt  Doxyfile
src/archive/_doc/: Hierarchy_And_Modules-librf21x.vsd  Introduction_For_Building.docx
src/archive/android/: README.md  build.sh
src/archive/android/jni/: Android.mk  Application.mk  libusb.h  pthread_fixes.h  wcsdup.c
src/archive/doc/: CMakeLists.txt  librf21x with JSON-RPC API.docx
src/archive/example/: CMakeLists.txt  rf21x-api-test-mutiple.cpp  rf21x-api-test.cpp  rf228-auth-test.cpp  rf228-connection-test.cpp
src/archive/openwrt/librf21x/: Makefile  README.txt
src/archive/openwrt/librf21x/patches/: usb.patch
src/archive/rpc/: README.txt  _rf21x.pyd  echo.py  hello-cgi.py  rf21x.py  rpc-cgi.py  rpc-server.py  rpc-test-cgi.html  rpc-test-cgi.py  rpc-test-raw.py  rpc-test.py
src/archive/src/: CMakeLists.txt  doxygen.h
src/archive/src/SimpleSocket/: SimpleSocket.cpp  SimpleSocket.h
src/archive/src/gsp/: CMakeLists.txt  abstract-gsp.cpp  gsp-hid.cpp  gsp-hid.h  gsp-serial-unix.cpp  gsp-serial-unix.h  gsp-serial-windows.cpp  gsp-serial-windows.h  gsp-socket.cpp  gsp-socket.h  gsp.cpp  gsp.h
src/archive/src/gsp-api/: CMakeLists.txt  gsp-api.cpp  gsp-api.def  gsp-api.h  gsp-wrap-test.cpp  gsp.i
src/archive/src/gsp-api/gsp-csharp/: CMakeLists.txt  gsp-test.cs
src/archive/src/gsp-server/: CMakeLists.txt  gsp-socket-server-main-linux.cpp  gsp-socket-server-main.cpp  gsp-socket-server-protocol.md
src/archive/src/gsp/Serial/: Serial.cpp  Serial.h  SerialEx.cpp  SerialEx.h  modified.txt
src/archive/src/gsp/cp210x/: Makefile  cp210x.c
src/archive/src/gsp/cssl/: cssl.c  cssl.h
src/archive/src/gsp/hidapi/: CMakeLists.txt  hidapi.h
src/archive/src/gsp/hidapi/linux/: hid-libusb.c
src/archive/src/gsp/hidapi/linux/udev/: 99-hid.rules
src/archive/src/gsp/hidapi/windows/: hid.c
src/archive/src/gsp/socket/: SocketClient-unix.cpp  SocketClient.h
src/archive/src/rf21x/: CMakeLists.txt  rf215.cpp  rf215.h  rf217.cpp  rf217.h  rf218.cpp  rf218.h  rf219.cpp  rf219.h  rf21x-base.cpp  rf21x-base.h  rf21x-test.cpp  rf21x.cpp  rf21x.h  rf21x.i  rf228.cpp  rf228.h
src/archive/src/rf21x-c/: CMakeLists.txt  rf21x-api.cpp
src/archive/src/rf21x-wrap/: CMakeLists.txt  rf21x-wrap-test.cpp  rf21x-wrap.cpp  rf21x-wrap.h  rf21x.i
src/archive/src/rf21x-wrap/rf21x-csharp/: CMakeLists.txt
src/archive/src/rf21x-wrap/rf21x-java/: CMakeLists.txt  rf21x_test.java
src/archive/src/rf21x-wrap/rf21x-python/: CMakeLists.txt  rf21x-test.py
