cmake_minimum_required(VERSION 2.8)

include_directories(.)
if(WIN32)
    add_library(hidapi STATIC windows/hid.c)
    target_link_libraries(hidapi setupapi.lib)
elseif(APPLE)
    find_library(IOKit_PATH NAMES IOKit)
    find_library(CoreFoundation_PATH NAMES CoreFoundation)
    add_library(hidapi STATIC mac/hid.c)
    target_link_libraries(hidapi ${IOKit_PATH} ${CoreFoundation_PATH})
elseif(UNIX)
    option(USB_UDEV "Build hidapi with libudev other then libusb-1.0 (need linux kernel 3.0 or higher)." ON)
    if(USB_UDEV)
        add_library(hidapi STATIC linux/hid.c)
        target_link_libraries(hidapi udev)
    else()
        find_package(libusb-1.0 REQUIRED)
        add_library(hidapi STATIC linux/hid-libusb.c)
        include_directories(${LIBUSB_1_INCLUDE_DIR})
        target_link_libraries(hidapi ${LIBUSB_1_LIBRARY})
    endif()
endif()
